--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -53,20 +53,6 @@ steps:
     inputs:
       versionSpec: ">=4.6.0"
 
-  - ${{ if eq(parameters.useNuGet, true) }}:
-    - task: DownloadBuildArtifacts@0
-      displayName: 'Download Nuget Test Feed'
-      inputs:
-        artifactName: NuGetTestFeed
-        downloadPath: $(System.DefaultWorkingDirectory)
-    - script: |
-        echo ##vso[task.setvariable variable=nugetInitArguments]--experimentalNuGetDependency true --nuGetTestFeed $(System.DefaultWorkingDirectory)\NuGetTestFeed --nuGetTestVersion ${{ parameters.version }}
-      displayName: 'Configure additional args for nuget'
-  - ${{ if not(eq(parameters.useNuGet, true)) }}:
-    - script: |
-        echo ##vso[task.setvariable variable=nugetInitArguments]
-      displayName: 'No additional args for nuget'
-
   # We force the usage of npm instead of yarn becuase yarn has fragility issues when redirected to a different server (such as verdaccio)
   - task: CmdLine@2
     displayName: Init new project
@@ -74,11 +60,24 @@ steps:
       script: npx react-native init testcli --npm --version ${{ parameters.version }}
       workingDirectory: $(Agent.BuildDirectory)
 
-  - task: CmdLine@2
-    displayName: Apply windows template
-    inputs:
-      script: npx react-native-windows-init --verbose --version $(npmTag) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }} $(nugetInitArguments)
-      workingDirectory: $(Agent.BuildDirectory)\testcli
+  - ${{ if eq(parameters.useNuGet, true) }}:
+    - task: DownloadBuildArtifacts@0
+      displayName: 'Download Nuget Test Feed'
+      inputs:
+        artifactName: NuGetTestFeed
+        downloadPath: $(System.DefaultWorkingDirectory)
+    - task: CmdLine@2
+      displayName: Apply windows template (with nuget)
+      inputs:
+        script: npx react-native-windows-init --verbose --version $(npmTag) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }} --experimentalNuGetDependency true --nuGetTestFeed $(System.DefaultWorkingDirectory)\NuGetTestFeed --nuGetTestVersion ${{ parameters.version }}
+        workingDirectory: $(Agent.BuildDirectory)\testcli
+
+  - ${{ if not(eq(parameters.useNuGet, true)) }}:
+    - task: CmdLine@2
+      displayName: Apply windows template (with nuget)
+      inputs:
+        script: npx react-native-windows-init --verbose --version $(npmTag) --overwrite --language ${{ parameters.language }} ${{ parameters.additionalInitArguments }}
+        workingDirectory: $(Agent.BuildDirectory)\testcli
 
   - task: PowerShell@2
     displayName: List Visual Studio Components
@@ -97,16 +96,19 @@ steps:
         -Cleanup:$true
     condition: and(succeeded(), ${{ parameters.installVsComponents }})
 
-  - ${{ if not(eq(parameters.configuration, 'Release')) }}:
-    - script: |
-        echo ##vso[task.setvariable variable=releaseBuildArgs]--release
-      displayName: 'Configure extra args for Build project'
+  - ${{ if eq(parameters.configuration, 'Release') }}:
+    - task: CmdLine@2
+      displayName: Build project (Release)
+      inputs:
+        script: npx --no-install react-native run-windows --arch ${{ parameters.platform }} --no-launch --no-deploy --logging --buildLogDirectory $(Build.BinariesDirectory)\${{ parameters.platform }}\${{ parameters.configuration }}\BuildLogs --release
+        workingDirectory: $(Agent.BuildDirectory)\testcli
 
-  - task: CmdLine@2
-    displayName: Build project
-    inputs:
-      script: npx --no-install react-native run-windows --arch ${{ parameters.platform }} --no-launch --no-deploy --logging --buildLogDirectory $(Build.BinariesDirectory)\${{ parameters.platform }}\${{ parameters.configuration }}\BuildLogs $(releaseBuildArgs)
-      workingDirectory: $(Agent.BuildDirectory)\testcli
+  - ${{ if not(eq(parameters.configuration, 'Release')) }}:
+    - task: CmdLine@2
+      displayName: Build project (Debug)
+      inputs:
+        script: npx --no-install react-native run-windows --arch ${{ parameters.platform }} --no-launch --no-deploy --logging --buildLogDirectory $(Build.BinariesDirectory)\${{ parameters.platform }}\${{ parameters.configuration }}\BuildLogs
+        workingDirectory: $(Agent.BuildDirectory)\testcli
 
   - task: PublishBuildArtifacts@1
     displayName: Upload build logs
