Squashed commit of the following:
commit c44314b07ff7260694742741a683ef6e7d18679e
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Mon Jul 13 19:11:58 2020 -0700

    Add ReactInstanceSettings tests

commit 5654dbd5cbc2503c2b32cb6ccb39bd5c46d9536c
Merge: b204c2b55 d22f3879e
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Mon Jul 13 18:28:57 2020 -0700

    Merge branch 'master' into abi-safety

commit b204c2b552bc95e35ca184ad29769b0cb3d8638b
Merge: 033a05315 d93f0850c
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Mon Jul 13 15:27:17 2020 -0700

    Merge branch 'master' into abi-safety

commit 033a05315bb22e3645dcd12d020c407321b5d2c8
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Mon Jul 13 15:23:56 2020 -0700

    add ReactNotificationService tests

commit 579124f9954fec912b1ff138fe74ea6b59240919
Merge: 9375e93c9 5b94760f7
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Mon Jul 13 11:18:18 2020 -0700

    Merge branch 'master' into abi-safety

commit 9375e93c9a640ef25fdce342e6f3649ca534b167
Merge: 60f2c44c5 dce9fe3ab
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jul 10 14:08:15 2020 -0700

    Merge branch 'master' into abi-safety

commit 60f2c44c54ee09e0e32e9d63838db98f0cff3266
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Fri Jul 10 14:07:09 2020 -0700

    add ReactDispatcher tests

commit e0e517c426000c209d822166995e45069e6d0dda
Merge: 6a358a6d3 d576f4566
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 23:06:52 2020 -0700

    Merge branch 'master' into abi-safety

commit 6a358a6d3adcb14c69bbe5e2e137503058574300
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 19:01:16 2020 -0700

    Change files

commit 2045e6a2ec82402579704589e74a6317b49e7a1c
Author: Andreas Eulitz <aeulitz@microsoft.com>
Date:   Thu Jul 9 18:59:47 2020 -0700

    add ReactPackageBuilder tests

commit 18cc8beadf14e74be7e05dc523849a14e7308383
Merge: 8ea8db53c 9db8df745
Author: Andreas Eulitz <aeulitz@m

--- a/vnext/Desktop.ABITests/React.Windows.Desktop.ABITests.vcxproj
+++ b/vnext/Desktop.ABITests/React.Windows.Desktop.ABITests.vcxproj
@@ -142,6 +142,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="PerfTests.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative.IntegrationTests\ReactInstanceSettingsTests.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative.IntegrationTests\ReactNativeHostTests.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative.IntegrationTests\ReactNotificationServiceTests.cpp" />
     <ClCompile Include="..\Microsoft.ReactNative.IntegrationTests\ReactPropertyBagTests.cpp" />
