--- a/vnext/Desktop.IntegrationTests/React.Windows.Desktop.IntegrationTests.vcxproj
+++ b/vnext/Desktop.IntegrationTests/React.Windows.Desktop.IntegrationTests.vcxproj
@@ -98,18 +98,25 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Desktop.DLL\React.Windows.Desktop.DLL.vcxproj">
+      <Project>{88bab0fa-e1ac-4da7-a30c-f91702a8eadb}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Folly\Folly.vcxproj">
       <Project>{A990658C-CE31-4BCC-976F-0FC6B1AF693D}</Project>
     </ProjectReference>
     <ProjectReference Include="..\IntegrationTests\React.Windows.IntegrationTests.vcxproj">
       <Project>{700A84FD-F92A-43F1-8D06-B0E0745DF9B5}</Project>
     </ProjectReference>
-    <ProjectReference Include="..\Desktop\React.Windows.Desktop.vcxproj">
-      <Project>{95048601-C3DC-475F-ADF8-7C0C764C10D5}</Project>
-    </ProjectReference>
     <ProjectReference Include="..\Test\React.Windows.Test.vcxproj">
       <Project>{cd0415c6-d908-4212-9481-49be41f58d27}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <!--
+    Used by the 'CopyFilesToOutputDirectory' target (more specifically, its '_CopyFilesMarkedCopyLocal' dependency')
+    to co-locate dependencies with the test binary.
+     -->
+    <ReferenceCopyLocalPaths Include="$(BaseOutDir)\React.Windows.Desktop.DLL\react-native-win32.dll" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChakraRuntimeHolder.h" />
