Codesign Microsoft.ReactNative binaries and nuget package (#5385)
This PR adds codesign infrastructure for the Microsoft.ReactNative binaries and nuget packages, but it is disabled until until we can make sure it meets compliance requirements.

* Added SignConfig files for:
    * Microsoft.ReactNative binaries and nuget
    * Microsoft.ReactNative.Managed binaries and nuget
    * Microsoft.ReactNative.Managed.CodeGen binaries and nuget
    * Microsoft.ReactNative.Cxx nuget
* Added code-sign tasks to our ymls for nuget publishing

Closes #5384

--- a/.ado/publish.yml
+++ b/.ado/publish.yml
@@ -182,12 +182,22 @@ jobs:
       - RnwNpmPublish
       - RnwNativeBuildDesktop
       - RnwNativeBuildUniversal
-    displayName: Publish NuGet
+    displayName: Sign Binaries and Publish NuGet
     pool:
       vmImage: $(VmImage)
+      # Disable codesign for now, until we're sure
+      # vmImage: Package ES Lab E
 
     steps:
       - checkout: none
+
+      # Disable codesign for now, until we're sure
+      # - task: PkgESSetupBuild@10
+      #   displayName: 'XESSetupBuild'
+      #   inputs:
+      #     productName: microsoftreactnative
+      #     branchVersion: false
+      #     nugetVer: true
 
       - task: DownloadPipelineArtifact@2
         displayName: Download VersionEnvVars
@@ -208,6 +218,8 @@ jobs:
         parameters:
           publishCommitId: $(publishCommitId)
           npmVersion: $(npmVersion)
+          # Disable codesign for now, until we're sure
+          # signMicrosoft: true
 
       - task: PublishPipelineArtifact@1
         displayName: "Publish final nuget artifacts"
