--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -346,12 +346,9 @@ jobs:
           workingDirectory: packages\microsoft-reactnative-sampleapps
         condition: succeeded()
 
-      - task: PublishBuildArtifacts@1
-        displayName: Upload build logs
-        condition:  succeededOrFailed()
-        inputs:
-          pathtoPublish: '$(BuildLogDirectory)'
-          artifactName: 'Build logs - $(Agent.JobName)'
+      - template: templates/upload-build-logs.yml
+        parameters:
+          buildLogDirectory: '$(BuildLogDirectory)'
 
   - job: RNWDesktopPR
     displayName: Desktop PR
