first batch of changes

--- a/vnext/src/tsconfig.json
+++ b/vnext/src/tsconfig.json
@@ -14,7 +14,8 @@
     "moduleResolution": "node",
     "noUnusedLocals": true,
     "strict": true,
-    "rootDir": "."
+    "rootDir": ".",
+    "esModuleInterop": true
   },
   "include": ["."],
   "exclude": []
