--- a/.ado/templates/prep-and-pack-single.yml
+++ b/.ado/templates/prep-and-pack-single.yml
@@ -25,7 +25,8 @@ steps:
         inPathRoot: ${{parameters.nugetroot}}
         outPathRoot: ${{parameters.nugetroot}}
 
-  - task: NuGetCommand@2
+  # NuGetCommand workaround: https://developercommunity.visualstudio.com/content/problem/288534/vsts-yaml-build-failure-the-task-name-nugetcommand.html
+  - task: 333b11bd-d341-40d9-afcf-b32d5ce6f23b@2
     displayName: '${{ parameters.packageId }} - Nuget pack'
     inputs:
       command: pack
