restore preview 2 nugets, and a script to transmogriphy until preview 3 is out

--- a/vnext/Microsoft.ReactNative/packages.config
+++ b/vnext/Microsoft.ReactNative/packages.config
@@ -6,5 +6,5 @@
   <package id="Microsoft.SourceLink.GitHub" version="1.0.0" targetFramework="native" developmentDependency="true" />
   <package id="Microsoft.UI.Xaml" version="2.3.191129002" targetFramework="native" />
   <package id="Microsoft.Windows.CppWinRT" version="2.0.200615.7" targetFramework="native" />
-  <package id="Microsoft.WinUI" version="3.0.0-development.200706.1-CI" targetFramework="native"/>
+  <package id="Microsoft.WinUI" version="3.0.0-preview2.200713.0" targetFramework="native"/>
 </packages>
