--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "lerna": "^3.16.1"
   },
   "resolutions": {
+    "acorn": "^7.1.1",
+    "logkitty": "^0.7.1",
     "**/eslint-plugin-react": "^7.14.1",
     "**/@wdio/appium-service": "5.12.1",
     "**/@wdio/cli": "5.12.1",
