Fix vnext exported files

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -74,11 +74,11 @@
     "/Common",
     "/DeforkingPatches",
     "/Folly",
+    "/generator.js",
     "/include",
     "/JSI",
     "/Libraries",
     "!/Libraries/**/*.windesktop.*",
-    "/local-cli",
     "/Microsoft.ReactNative",
     "/Microsoft.ReactNative.Cxx",
     "/Microsoft.ReactNative.Managed",
