--- a/packages/@react-native-windows/generator-windows/package.json
+++ b/packages/@react-native-windows/generator-windows/package.json
@@ -37,5 +37,14 @@
   "files": [
     "lib-commonjs",
     "templates"
-  ]
+  ],
+  "beachball": {
+    "defaultNpmTag": "canary",
+    "disallowedChangeTypes": [
+      "major",
+      "minor",
+      "patch"
+    ]
+  },
+  "promoteRelease": true
 }
