--- a/packages/@react-native-windows/project-utils/package.json
+++ b/packages/@react-native-windows/project-utils/package.json
@@ -31,5 +31,14 @@
   },
   "files": [
     "lib-commonjs"
-  ]
+  ],
+  "beachball": {
+    "defaultNpmTag": "canary",
+    "disallowedChangeTypes": [
+      "major",
+      "minor",
+      "patch"
+    ]
+  },
+  "promoteRelease": true
 }
