--- a/packages/@react-native-windows/generator-common/package.json
+++ b/packages/@react-native-windows/generator-common/package.json
@@ -33,5 +33,14 @@
   },
   "files": [
     "lib-commonjs"
-  ]
+  ],
+  "beachball": {
+    "defaultNpmTag": "canary",
+    "disallowedChangeTypes": [
+      "major",
+      "minor",
+      "patch"
+    ]
+  },
+  "promoteRelease": true
 }
