--- a/vnext/PropertySheets/WinUI.props
+++ b/vnext/PropertySheets/WinUI.props
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Label="WinUI3 versioning">
-    <!-- This value is also used by the CLI, see \vnext\local-cli\src\generator-windows\index.ts -->
+    <!-- This value is also used by the CLI, see /packages/@react-native-windows/generate-windows -->
     <WinUI3Version>3.0.0-preview2.200713.0</WinUI3Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(UseWinUI3)'=='true'">
