Integrate React Native Up to The Base of 0.63 (#5586)
* progress

* Fix bad merge

* Update the native bits

* Change files

* Fix desktop solution

--- a/vnext/package.json
+++ b/vnext/package.json
@@ -40,9 +40,11 @@
     "nullthrows": "^1.1.1",
     "ora": "^3.4.0",
     "pretty-format": "^24.9.0",
+    "promise": "^8.0.3",
     "prop-types": "^15.7.2",
-    "react-devtools-core": "^4.0.6",
+    "react-devtools-core": "^4.6.0",
     "regenerator-runtime": "^0.13.2",
+    "scheduler": "0.19.1",
     "semver": "^7.1.3",
     "shelljs": "^0.7.8",
     "stacktrace-parser": "^0.1.3",
@@ -70,21 +72,21 @@
     "@types/xml-parser": "^1.2.29",
     "@types/xmldom": "^0.1.29",
     "eslint": "6.7.0",
+    "flow-bin": "^0.122.0",
     "eslint-plugin-prettier": "2.6.2",
-    "flow-bin": "^0.120.1",
-    "jscodeshift": "^0.6.2",
+    "jscodeshift": "^0.7.0",
     "just-scripts": "^0.36.1",
     "prettier": "1.17.0",
     "react": "16.13.0",
-    "react-native": "0.0.0-56cf99a96",
+    "react-native": "0.0.0-4a48b021d",
     "react-native-platform-override": "^0.2.1",
     "react-native-windows-codegen": "0.0.10",
     "react-refresh": "^0.4.0",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
-    "react": "16.13.0",
-    "react-native": "0.0.0-56cf99a96"
+    "react": "16.13.1",
+    "react-native": "0.0.0-4a48b021d"
   },
   "beachball": {
     "defaultNpmTag": "canary",
