Extract local-cli into a separate npm package (#5519)
* Extract local-cli into a separate npm package

* Test

* Fix vnext exported files

* Fix formatting issue after merge

* promoteRelease and Beachball

* promoteRelease Fix

* generator-windows -> generate-windows

* Update dependencies correctly

* Change files

* Back to a monolithic CLI

* Change files

* Remove stale changes

* Fix links

--- a/packages/@react-native-windows/cli/tsconfig.json
+++ b/packages/@react-native-windows/cli/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@rnw-scripts/ts-config",
   "compilerOptions": {
-    "outDir": "lib-commonjs",
+    // Change the default to allow ES2019.String "trimEnd"
     "lib": [
       "DOM",
       "ES6",
@@ -13,4 +13,5 @@
     "strictFunctionTypes": false,
   },
   "include": ["src"],
+  "exclude": ["node_modules"]
 }
