--- a/vnext/package.json
+++ b/vnext/package.json
@@ -18,59 +18,35 @@
     "lint:fix": "just-scripts lint:fix",
     "lint": "just-scripts lint",
     "start": "react-native start",
-    "watch": "just-scripts watch",
     "validate-overrides": "react-native-platform-override validate"
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "@react-native-windows/cli": "0.0.0-canary.0",
     "abort-controller": "^3.0.0",
     "anser": "^1.4.9",
     "base64-js": "^1.1.2",
-    "chalk": "^3.0.0",
-    "cli-spinners": "^2.2.0",
-    "envinfo": "^7.5.0",
     "event-target-shim": "^5.0.1",
     "fbjs": "^1.0.0",
     "fbjs-scripts": "^1.1.0",
-    "glob": "^7.1.1",
-    "inquirer": "^3.0.6",
     "invariant": "^2.2.4",
-    "mustache": "^4.0.1",
-    "nuget-exe": "4.9.2",
     "nullthrows": "^1.1.1",
-    "ora": "^3.4.0",
     "pretty-format": "^24.9.0",
     "promise": "^8.0.3",
     "prop-types": "^15.7.2",
     "react-devtools-core": "^4.6.0",
     "regenerator-runtime": "^0.13.2",
     "scheduler": "0.19.1",
-    "semver": "^7.1.3",
-    "shelljs": "^0.7.8",
     "stacktrace-parser": "^0.1.3",
     "use-subscription": "^1.0.0",
-    "username": "^5.1.0",
-    "uuid": "^3.3.2",
-    "whatwg-fetch": "^3.0.0",
-    "xml-parser": "^1.2.1",
-    "xmldom": "^0.3.0",
-    "xpath": "^0.0.27"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@microsoft/api-documenter": "^7.3.8",
     "@microsoft/api-extractor": "^7.3.8",
-    "@react-native-community/cli-types": "^4.10.1",
     "@react-native-community/eslint-config": "^1.1.0",
-    "@types/chalk": "^2.2.0",
-    "@types/inquirer": "^6.5.0",
-    "@types/mustache": "^4.0.1",
-    "@types/ora": "^3.2.0",
-    "@types/react": "16.9.0",
     "@types/react-native": "^0.62.10",
-    "@types/shelljs": "^0.8.8",
-    "@types/uuid": "^8.0.0",
-    "@types/xml-parser": "^1.2.29",
-    "@types/xmldom": "^0.1.29",
+    "@types/react": "16.9.0",
     "eslint": "6.7.0",
     "flow-bin": "^0.122.0",
     "eslint-plugin-prettier": "2.6.2",
@@ -103,11 +79,11 @@
     "/Common",
     "/DeforkingPatches",
     "/Folly",
+    "/generate.js",
     "/include",
     "/JSI",
     "/Libraries",
     "!/Libraries/**/*.windesktop.*",
-    "/local-cli",
     "/Microsoft.ReactNative",
     "/Microsoft.ReactNative.Cxx",
     "/Microsoft.ReactNative.Managed",
@@ -136,5 +112,6 @@
     "/typings-index.js",
     "/typings-index.js.map",
     "/rn-get-polyfills.js"
-  ]
+  ],
+  "promoteRelease": true
 }
